<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvCatEmoji"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:text="@string/cat_emoji"
        android:textSize="100sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/btnOpenGallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_gallery"
        app:layout_constraintTop_toBottomOf="@id/tvCatEmoji"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnVoteCats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_vote"
        app:layout_constraintTop_toBottomOf="@id/btnOpenGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/imageRandomCat"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/btnVoteCats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
